# backend-teamplate

./: .gitignore  Dockerfile  Makefile  docker-compose.local.yaml  docker-compose.staging.yaml  pyproject.toml
src/: bootstrap.py  exceptions.py  logger.py
src/api/: exception_handler.py  webserver.py
src/api/routers/: helpers.py
src/domain/: abstract_uow.py
src/entrypoints/: main.py
src/infrastructure/: uow.py
src/infrastructure/adapters/: sql_model_adapter.py
src/settings/: settings.dev.toml  settings.py  settings.staging.toml  settings.toml
