[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Alex",email = "aleksei@yai.digital"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.14,<0.116.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "dynaconf (>=3.2.11,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]

packages = [
  { include = "src" },
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
